<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="196dp"
        android:layout_height="170dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/final_logo" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="40dp"
        android:textColor="#3C0000"
        android:text="@string/welcome" />

    <LinearLayout
        android:layout_width="374dp"
        android:layout_height="35dp"
        android:background="@drawable/button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/points_earned"
            android:textColor="#000000"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/points"
            android:layout_width="223dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="@string/points_earned_hint"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:text="@string/name"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/name_hint"
            android:textSize="20dp"
            android:inputType="textPersonName" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:text="@string/username_profile"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/username_hint_profile"
            android:textSize="20dp"
            android:inputType="textPersonName" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:text="@string/gender"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/gender_hint"
            android:textSize="20dp"
            android:inputType="textAutoComplete" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:text="@string/date_of_birth"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/mm_dd_yyyy"
            android:textSize="20dp"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <Button
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home" />
    </LinearLayout>


</LinearLayout>
