<?xml version="1.0" encoding="utf-8"?>
<LinearLayout    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:gravity="center_horizontal"
    >

    <Button
        android:id="@+id/button2"
        android:layout_width="166dp"
        android:layout_height="168dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/final_logo" />

    <EditText
        android:id="@+id/username"
        android:layout_width="252dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:textColorHint="#000"
        android:textColor="#000"
        android:gravity="center"
        android:hint="@string/username"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="254dp"
        android:layout_height="61dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:textColorHint="#000"
        android:textColor="#000"
        android:gravity="center"
        android:hint="@string/password"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="125dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:text="@string/log_in" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/notreg"
            android:layout_width="362dp"
            android:layout_height="match_parent"
            android:background="@drawable/button"
            android:gravity="center"
            android:text="@string/not_registered_register_here"
            android:textColor="#000"
            android:textColorHint="#000"
            android:textSize="25dp" />

    </LinearLayout>




</LinearLayout>