<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="110dp"
        android:layout_height="109dp"
        android:layout_gravity="center"

        app:srcCompat="@drawable/small" />

    <TextView
        android:id="@+id/textView0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/about"
        android:textColor="#00012C"
        android:textSize="35dp" />


    <TextView
        android:id="@+id/textViewContext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/eyes_on_the_street_is_a_crowdsourcing_application_where_users_report_crime_perceived_danger_and_suspicious_activities_to_enhance_their_daily_commuting_alternatives"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center_horizontal"
        android:text="@string/version_1_0"
        android:textColor="#000000"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:text="@string/developers"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:text="Adrian Gomez Rodriguez"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:text="Carlos Chavez"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:text="Emiliano Ruiz"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:text="Itzel Rivas"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:text="Sandra Barba"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18dp" />

</LinearLayout>